# mood-tracker

./: .gitignore  Makefile  pyproject.toml  requirements.txt
app/: main.py
app/backend/: __init__.py  constants.py
app/backend/db/: __init__.py  controller.py  entities.py  queries.py
app/backend/db/data/: mood_tracker.db
app/buttons/: button_bar.py  image_button.py  text_icon_button.py
app/elements/: calendar.py  carousel.py  choose_option.py  hi_message.py  menu_bar.py  quote.py  tiles.py
app/elements/my_tiles/: __init__.py  day_avg.py  freq_emotion.py  percent_happy.py  tired_score.py
app/layouts/: form_layout.py  main_layout.py
app/log/: log.py
app/pages/: calendar_page.py  day_form.py  emoji_form.py  form_page.py  happy_form.py  sleep.py  sleep_form.py  sleep_from.py  stats.py  tired_form.py
app/styles/: gradients.py  text.py
