[tool.poetry]
name = "MoodTracker"
version = "0.1.0"
description = ""
authors = ["benvito"]
# readme = "README.md"
packages = [{include = "app/elements"}]

[tool.poetry.dependencies]
python = "^3.12.0"
flet = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"